# waveplus-reader-esp32-rs

./: Cargo.toml  README.md  build.rs  cfg.toml.example  flake.nix  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: app.rs  ble.rs  http.rs  main.rs  measurement.rs  time.rs  utils.rs  waveplus.rs  wifi.rs  wifi_fix.rs
src/app/: http.rs  state.rs
src/waveplus/: measurement.rs
