[package]
name = "waveplus-reader-esp32-rs"
version = "0.1.0"
authors = ["Simon Jagoe <simon@simonjagoe.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "waveplus-reader-esp32-rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, features = ["alloc", "embassy-sync"] }
toml-cfg    = "=0.1.3"
anyhow      = "=1.0.86"
rgb         = "0.8.29"
embedded-svc = "0.28.0"
esp32-nimble = "0.8.1"
bincode    = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }

[build-dependencies]
embuild = "0.32.0"
toml-cfg    = "=0.1.3"
